faltu k cheze nikal diye, chal approve kar

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://flint-1701.github.io/TODO-app-with-React/dist/",
+  "homepage": "https://flint-1701.github.io/TODO-app-with-React/",
   "name": "todo-app-with-react",
   "private": true,
   "version": "0.0.0",
